--- a/index.html
+++ b/index.html
@@ -3,33 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
-    <title>Landing Page</title>
+    <link rel="stlesheet" href="styles.css">
+    <title>Document</title>
 </head>
-<body class="body">
-    <div class="section1">
-        <div class="headLogo"><strong>Header Logo</strong></div>
-        <div class="headLink">header link one</div>
-        <div class="headLink">header link two</div>
-        <div class="headLink">header link three</div>
-    </div>
-
-    <div class="section2">
-        <div class="hero">
-            <h1 class="heroHead">This website is awsome</h1>
-            <p class="heroSub">This website has some subtext that goes under the main title. 
-                It's a smaller font and the color is lower contrast
-            </p>
-            <button class="button">Sign up</button>
-        </div>
-        <div class="imgBox">
-            <p>this is a placeholder for an image</p>
-        </div>
-    </div>
-
-
-    <div class="section3"></div>
-    <div class="section4"></div>
+<body>
     
 </body>
 </html>
