--- a/index.html
+++ b/index.html
@@ -3,10 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stlesheet" href="styles.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
+    <title>Landing Page</title>
 </head>
-<body>
-    
-</body>
+    <body id="body">
+        <div class="nav">
+            <div class="nav-item">Header Logo</div>
+            <div class="nav-item">header link one</div>
+            <div class="nav-item">header link two</div>
+            <div class="nav-item">header link three</div>
+        </div>
+    </body>
 </html>
