--- a/index.html
+++ b/index.html
@@ -13,5 +13,15 @@
             <div class="nav-item">header link two</div>
             <div class="nav-item">header link three</div>
         </div>
+        <div class="hero-main">
+            <div class="hero-left">
+                <div class="hero-head"><strong>This website is awesome</strong></div>
+                <div class="hero-sub">This website has somesubtext that goes under the main title. It's a smaller font and the colour is lower contrast.</div>
+                <button class="button">Sign up</button>
+            </div>
+            <div class="hero-right">
+                <div class="placeholder">this is a placeholder for an image</div>
+            </div>
+        </div>
     </body>
 </html>
